--- a/package.json
+++ b/package.json
@@ -10,12 +10,14 @@
     },
     "dependencies": {
         "@types/pg": "^8.6.5",
+        "@types/react-datepicker": "^4.4.2",
         "echarts-for-react": "^3.0.2",
         "leaflet": "^1.8.0",
         "next": "12.2.0",
         "next-themes": "^0.2.0",
         "pg": "^8.7.3",
         "react": "18.2.0",
+        "react-datepicker": "^4.8.0",
         "react-dom": "18.2.0",
         "react-leaflet": "^4.0.1"
     },
