--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
         "lint": "next lint"
     },
     "dependencies": {
+        "echarts": "^5.3.3",
         "@types/pg": "^8.6.5",
         "@types/react-datepicker": "^4.4.2",
         "echarts-for-react": "^3.0.2",
@@ -20,9 +21,6 @@
         "react-datepicker": "^4.8.0",
         "react-dom": "18.2.0",
         "react-leaflet": "^4.0.1"
-    },
-    "peerDependencies": {
-        "echarts": "^5.3.3"
     },
     "devDependencies": {
         "@types/leaflet": "^1.7.11",
